--- a/content/announcements/DeFi-Notifications-Under-the-Hood/index.yml
+++ b/content/announcements/DeFi-Notifications-Under-the-Hood/index.yml
@@ -9,5 +9,5 @@ footer:
 navbar:
   - /_shared/navbar/index.md
 
-image: assets/images/announcements/defi-org-dappradar-launch-100k-developers-grant-for-the-open-defi-notification-protocol/main.jpeg
-title: "DeFi.org & DappRadar Launch $100k Developers Grant for The Open DeFi Notification Protocol!"
+image: assets/images/announcements/DeFi-Notifications-Under-the-Hood/bg.jpg
+title: "The Open DeFi Notifications Protocol - What’s Under the Hood?"
