--- a/content/announcements/Introducing-TON-DeFiorg/index.yml
+++ b/content/announcements/Introducing-TON-DeFiorg/index.yml
@@ -9,5 +9,5 @@ footer:
 navbar:
   - /_shared/navbar/index.md
 
-image: assets/images/announcements/defi-org-dappradar-launch-100k-developers-grant-for-the-open-defi-notification-protocol/main.jpeg
-title: "DeFi.org & DappRadar Launch $100k Developers Grant for The Open DeFi Notification Protocol!"
+image: assets/images/announcements/Introducing-TON-DeFiorg/bg.png
+title: "Introducing TON@DeFi.org"
